--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ping heroku app to keep it live",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "node-fetch": "^2.6.0"
+  },
+  "engines": {
+    "node": "12.13.0"
   }
 }
